common-applications/test-environment/openeuler-devops/website/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website
  namespace: openeuler-devops
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/website:master-e9f1e3
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 443
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 443
          timeoutSeconds: 5
