common-applications/test-environment/openeuler-devops/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: openeuler-devops
spec:
  ports:
  - name: http
    port: 443
    targetPort: 443
  selector:
    app: website
  type: ClusterIP
